--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 <link rel="stylesheet" href="../../static/fontawesome/css/all.css" >
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
 <body>
 
