--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="{% static 'css/w3.css' %}">
 <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-<link rel="stylesheet" href="../../static/fontawesome/css/all.css" >
+<link rel="stylesheet" href="/static/fontawesome/css/all.css" >
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
 <body>
