--- a/templates/rubrica/rubrica_admin.html
+++ b/templates/rubrica/rubrica_admin.html
@@ -289,9 +289,10 @@ function actualizarPuntaje(){
 //
 function sendAspectosRubrica(){
     var xhr = new XMLHttpRequest();
-    var url = 0;
+    var url = "{% url 'rubricas:update_aspectos_rubrica' %}";
     xhr.open("POST", url, true);
     xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
     xhr.send(JSON.stringify(detalleRubrica));
 }
 </script>
